aligned currentweather container correctly

--- a/style.css
+++ b/style.css
@@ -171,7 +171,6 @@ section {
   gap: 3.2rem;
   justify-content: space-evenly;
   margin: auto 0;
-  align-items: center;
 }
 
 .loader {
@@ -311,8 +310,8 @@ section {
   right: 0;
   bottom: 0;
   background-color: var(--tertiary-color);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
 }
 
 .slider:before {
@@ -324,8 +323,8 @@ section {
   left: 4px;
   bottom: 4px;
   background-color: var(--primary-color);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -387,6 +386,7 @@ input:checked + .slider:before {
   max-width: 37.7rem;
   position: relative;
   scroll-behavior: smooth;
+  align-self: center;
 }
 
 .forecast-list {
@@ -444,6 +444,7 @@ input:checked + .slider:before {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  gap: 3rem;
 }
 
 .sunrise,
